fix(Table): cell aligning should be maximum specific (#1764)

--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -38,7 +38,7 @@
 
         background-color: var(--g-color-base-background);
         @include mixins.text-subheader-2();
-        &_align_right {
+        :is(&_align_right) {
             #{$block}__table-header-content {
                 justify-content: flex-end;
 
